--- a/src/main/resource/application.properties
+++ b/src/main/resource/application.properties
@@ -7,14 +7,14 @@ server.address=0.0.0.0
 
 # real database
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-j6c23y80pvs4u81991o.mysql.rds.aliyuncs.com:3306/mca?allowMultiQueries=true&useOldAliasMetadataBehavior=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&autoReconnectForPools=true&tinyInt1isBit=false&connectTimeout=3000
-spring.datasource.username=mingcha_2019
-spring.datasource.password=Qlh8i00rYoo-8E6g)+
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 
-#spring.datasource.url=jdbc:mysql://rm-j6c23y80pvs4u8199.mysql.rds.aliyuncs.com:3306/mca?allowMultiQueries=true&useOldAliasMetadataBehavior=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&autoReconnectForPools=true&tinyInt1isBit=false&connectTimeout=3000
-#spring.datasource.username=mingcha_2019
-#spring.datasource.password=Qlh8i00rYoo-8E6g)+
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
 
 mybatis.configuration.map-underscore-to-camel-case=true
 mapper.not-empty=false
@@ -46,17 +46,17 @@ pagehelper.rowBoundsWithCount=true
 
 #253短信验证
 sms.url=http://intapi.253.com/send/json
-sms.account=I1752105
-sms.password=xUv3fASDE48c2c
+sms.account=
+sms.password=
 
 
 
 #阿里云oss上传
 aliyun.accessKeyId=LTAI4FmsnP7f5GDMayy3f71H
-aliyun.accessKeySecret=ZtpfhgDOkL2TIrPWNv5rDMHqIUc1d9
+aliyun.accessKeySecret=
 aliyun.oss.endpoint=https://oss-cn-hongkong.aliyuncs.com
 aliyun.oss.bucketName=mingcha
-aliyun.oss.url=https://mingcha.oss-cn-hongkong.aliyuncs.com
+aliyun.oss.url=
 
 #雷盾交易所api lcny等价于人民币
 loex.openapi.url=https://openapi.loex.io/open/api/get_ticker?symbol=spulcny
@@ -64,11 +64,11 @@ loex.openapi.url=https://openapi.loex.io/open/api/get_ticker?symbol=spulcny
 #ETH节点
 #eth.privateKey.folder=D:/testeth
 eth.privateKey.folder=/root/privatekey
-eth.node.url=http://47.56.172.186:8545/
+eth.node.url=http://127.0.0.1:8545/
 
-wechat.appid=wx86a9c19e7ae005af
-wechat.mcaid=1342183001
-wechat.apikey=553fc48799ae08f8766a62228c6ac0cc
-wechat.appsecret=3df1a2342f6d92a8936c33586b856b27
-wechat.unifiedorder.url=https://api.mch.weixin.qq.com/pay/unifiedorder
-wechat.paycallback.url=http://47.56.172.37:8080/order/payCallback
+wechat.appid=
+wechat.mcaid=
+wechat.apikey=
+wechat.appsecret=
+wechat.unifiedorder.url=
+wechat.paycallback.url=
